Fix metadata and typo in pub

--- a/blog_efflux/_posts/2022-07-19-lalejini2022tag.md
+++ b/blog_efflux/_posts/2022-07-19-lalejini2022tag.md
@@ -13,9 +13,9 @@ authors:
   - Charles Ofria
 venue: The Genetic and Evolutionary Computation Conference
 projects:
-  - hstrat
+  - tag
 abstract: |
-  This Hot-off-the-Press paper summarizes our recently published work, "Tag-based regulation of modules in genetic programming improves context-dependent problem solving," published in Genetic Programming and Evolvable Machines [1].
+  This Hot-off-the-Press paper summarizes our recently published work, "Tag-based regulation of modules in genetic programming improves context-dependent problem solving," published in Genetic Programming and Evolvable Machines.
   We introduce and experimentally demonstrate tag-based genetic regulation, a genetic programming (GP) technique that allows programs to dynamically adjust which code modules to express.
   Tags are evolvable labels that provide a flexible naming scheme for referencing code modules.
   Tag-based regulation extends tag-based naming schemes to allow programs to "promote" and "repress" code modules to alter module execution patterns.
