List hstrat in published software libraries

--- a/blog_efflux/_posts/2022-11-07-moreno2022hstrat.md
+++ b/blog_efflux/_posts/2022-11-07-moreno2022hstrat.md
@@ -13,6 +13,7 @@ authors:
 venue: Journal of Open Source Software
 projects:
   - hstrat
+  - libraries
 abstract: |
   Digital evolution systems instantiate evolutionary processes over populations of virtual agents *in silico*.
   These programs can serve as rich experimental model systems.
