Add view_publisher field

--- a/blog_efflux/_posts/2022-11-07-moreno2022hstrat.md
+++ b/blog_efflux/_posts/2022-11-07-moreno2022hstrat.md
@@ -5,6 +5,7 @@ date: 2022-11-07
 permalink: "/pubs/:title"
 category: journal
 download: https://www.theoj.org/joss-papers/joss.04866/10.21105.joss.04866.pdf
+view_publisher: https://doi.org/10.21105/joss.04866
 doi: "10.21105/joss.04866"
 authors:
   - Matthew Andres Moreno
