--- a/blog_professional/_posts/2019-11-19-why-tweet.md
+++ b/blog_professional/_posts/2019-11-19-why-tweet.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Why Tweet?"
 date:   2019-11-19
 no_toc: true
+published: false
 ---
 
 I extracted and set aside this subsection from a [larger piece surveying academic twitter](/2019/11/16/twitter-bestiary.html).
