--- a/blog_recipes/_posts/2020-12-26-taro-tea.md
+++ b/blog_recipes/_posts/2020-12-26-taro-tea.md
@@ -25,4 +25,5 @@ recipe:
     6. sweeten or add condensed milk to taste
     7. serve over ice with boba pearls
     8. leftover cooked taro cubes can be frozen
+published: false
 ---
