fixup! Clean up blog

--- a/blog_personal/_posts/2020-04-23-blink-ish.md
+++ b/blog_personal/_posts/2020-04-23-blink-ish.md
@@ -3,6 +3,7 @@ layout: post
 title:  "So You Want a Pretty Offline Linux Environment on iOS"
 date:   2020-04-23
 no_toc: true
+published: false
 ---
 
 TODO under construction
