--- a/blog_recipes/_posts/2021-04-14-pita.md
+++ b/blog_recipes/_posts/2021-04-14-pita.md
@@ -23,7 +23,7 @@ recipe:
     4. put bowl in a warm place, uncovered about 15 min.
     5. add salt, olive oil, and 1 1/2 cup flour
     6. stir into a shaggy mas
-    7. dust with four then knead in bowl for 1 min.
+    7. dust with flour then knead in bowl for 1 min.
     8. knead dough on counter for 2 min.
     9. cover and let rest 10 min.
     10. knead for 2 min.
