Add arxiv doi/link

--- a/blog_efflux/_posts/2021-07-22-moreno2021case.md
+++ b/blog_efflux/_posts/2021-07-22-moreno2021case.md
@@ -27,11 +27,12 @@ bibtex: |-
     title = {Case Study of Novelty, Complexity, and Adaptation in a Multicellular System},
     year = {2021},
     url = {http://workshops.alife.org/oee4/papers/moreno-oee4-camera-ready.pdf},
+    doi = {10.48550/arXiv.2405.07241},
     booktitle = {OEE4: The Fourth Workshop on Open-Ended Evolution},
     numpages = {9},
     location = {Prague, Czech Republic}
   }
-citation: "Matthew Andres Moreno, Santiago Rodriguez Papa and Charles Ofria. 2021. Case Study of Novelty, Complexity, and Adaptation in a Multicellular System. OEE4: The Fourth Workshop on Open-Ended Evolution."
+citation: "Matthew Andres Moreno, Santiago Rodriguez Papa and Charles Ofria. 2021. Case Study of Novelty, Complexity, and Adaptation in a Multicellular System. OEE4: The Fourth Workshop on Open-Ended Evolution. https://doi.org/10.48550/arXiv.2405.07241"
 supporting_materials: |
   - [extended preprint](https://arxiv.org/abs/2405.07241) [via arXiv ☠️](https://arxiv.org)
   - [supplement](https://osf.io/gekc8/) [via Open Science Framework ❋](https://osf.io)
